fix: article content is center aligned on wide screen now (#1)

--- a/packages/theme-gungnir/styles/mobile.styl
+++ b/packages/theme-gungnir/styles/mobile.styl
@@ -24,7 +24,7 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     top -15px !important
     right -2px
     padding-top 2rem
-    width 15rem !important
+    width $catalogWidth !important
     height 100%
     background-color var(--bg-color)
     z-index 5
